--- a/content/data/config.json
+++ b/content/data/config.json
@@ -14,6 +14,17 @@
                 "altText": ""
             },
             {
+                "label": "Learn more",
+                "altText": "Learn more",
+                "url": "/",
+                "showIcon": false,
+                "icon": "arrowRight",
+                "iconPosition": "right",
+                "style": "secondary",
+                "elementId": "",
+                "type": "Button"
+            },
+            {
                 "type": "Link",
                 "label": "Careers",
                 "url": "/careers",
